--- a/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/doc-status-card.xhtml
@@ -9,8 +9,16 @@
     <ui:define name="menuActions" >
     </ui:define>
 
-    <ui:define name="toolbarComponents" >
-    </ui:define>    
+    <ui:define name="specToolButtons" >
+        <p:commandButton icon="ui-icon-disk" title="#{bundle.SaveAndClose}" update="mainFRM"
+                         actionListener="#{_bean.onCloseCard('save')}"
+                         onclick="sendFormSize();">
+           <f:param name="isRequired" value="true"/>
+       </p:commandButton>
+        <span class="ui-separator">
+            <span class="ui-icon ui-icon-grip-dotted-vertical" />
+        </span>
+    </ui:define> 
     
     <ui:define name="centerFormContent">       
         <p:tabView orientation="left" id="mainTabView" styleClass="ui-grid-col-12 col-padding"  >
@@ -38,17 +46,7 @@
                         <f:selectItem itemValue="fail" itemLabel="#{bundle.Red}"/>
                         <f:selectItem itemValue="completed" itemLabel="#{bundle.Gray}"/>
                     </p:selectOneMenu>
-                    <p:separator/>
-                    <p:commandButton value="#{bundle.Save}" update="mainFRM"
-                                     actionListener="#{_bean.onSaveAndClose('save')}" 
-                                     onclick="sendFormSize();"
-                                     style="float: right;">
-                        <f:param name="isRequired" value="true"/>
-                    </p:commandButton>
                 </p:panelGrid>
-            </p:tab>
-            
-            <p:tab title="#{bundle.Settings}" >            
             </p:tab>
         </p:tabView>
     </ui:define>
