--- a/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/users/user-card.xhtml
@@ -167,24 +167,25 @@
             </p:panelGrid>
         </p:tab>
 
-        <p:tab title="#{bundle.Other}">
+        <p:tab title="#{bundle.Other}" id="tabOther">
             <p:panelGrid id="pnOther" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">
                 <p:outputLabel value="#{bundle.Folder}:" />
                 <ui:include src="/view/common/item-select-btn.xhtml" >
                     <ui:param name="_itemValue" value="#{_bean.editedItem.inbox}"/>
                     <ui:param name="_itemLabel" value="fullName"/>
                     <ui:param name="_required" value="#{false}" />
-                    <ui:param name="_disabled" value="#{_bean.isReadOnly()}"/>
+                    <ui:param name="_disabled" value="#{_bean.isReadOnly() or _bean.editedItem.id == null}"/>
                     <ui:param name="_itemPanel" value="folderPanel"/>
                     <ui:param name="_titleItem" value="#{bundle.DefaultFolder}"/>
                     <ui:param name="_selectorBean" value="#{foldersBean}"/>
                     <ui:param name="_items" value="#{foldersBean.findAll()}"/>
                     <ui:param name="_actionClear" value="setInbox"/>
                     <ui:param name="_actionSelect" value="onInboxSelected"/>
-                    <ui:param name="_validateAction" value="checkFolder"/>
+                    <ui:param name="_validateAction" value="checkFolder"/>                    
                     <ui:param name="_update" value=""/>
-                </ui:include>             
-
+                </ui:include>         
+                <h:outputLabel value="#{msg.SaveUserBeforeMakeInbox}" rendered="#{_bean.editedItem.id == null}" styleClass="warning-msg"/>
+                
                 <p:outputLabel value="#{bundle.EmailSign}:" />
                 <p:textEditor value="#{_bean.editedItem.emailSign}" valueChangeListener="#{_bean.onEmailSignChange}" styleClass="ui-grid-col-12"
                               height="200" readonly="#{_bean.isReadOnly()}">
