--- a/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-card.xhtml
@@ -56,7 +56,7 @@
                                              icon="ui-icon-disk"
                                              update="mainFRM"
                                              action="#{_bean.prepSaveItemAndClose()}" ajax="false"
-                                             onclick="sendFormSize('#{_bean.getFormName()}'); if (itemChange == 1) {onChangeItem();}">
+                                             onclick="sendFormSize('user'); if (itemChange == 1) {onChangeItem();}">
                                 <f:param name="isRequired" value="true"/>
                             </p:commandButton>
                             <span class="ui-separator">
