--- a/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-card.xhtml
@@ -203,11 +203,8 @@
                     rendered="#{!_bean.isReadOnly() and _bean.editedItem.state.currentState.id == 5}"
                     icon="ui-icon-extlink"
                     update="mainFRM"
-                    actionListener="#{_bean.prepSaveItemAndPublic()}"
-                    onclick="if (itemChange == 1) {
-                                onChangeItem();
-                            }
-                            sendFormSize();">
+                    action="#{_bean.prepSaveItemAndPublic()}" ajax="false"
+                    onclick="if (itemChange == 1) {onChangeItem();} sendFormSize('#{_bean.getFormName()}');">
             <f:param name="isRequired" value="true"/>
         </p:commandButton>
     </ui:define>
